CTransifex changelog

+ added breadcrumbs
+ added a router file
+ added a language view
# now stats are being calculated as in transifex