@@ -84,6 +84,7 @@ class CtransifexHelperLanguage
 		'indonesian' => 'id',
 		'italian' => 'it',
 		'kazakh' => 'kk',
+		'kurdish' => 'ku',
 		'kyrgyz' => 'ky',
 		'latin' => 'la',
 		'latvian' => 'lv',
@@ -187,6 +188,7 @@ class CtransifexHelperLanguage
 	 * @var array
 	 */
 	public static $code2ToName = array(
+		'af' => 'africaans',
 		'am' => 'amharic',
 		'ar' => 'arabic',
 		'az' => 'azeri',
@@ -215,12 +217,15 @@ class CtransifexHelperLanguage
 		'hi' => 'hindi',
 		'hr' => 'croatian',
 		'hu' => 'hungarian',
+		'hy' => 'armenian',
 		'id' => 'indonesian',
 		'is' => 'icelandic',
 		'it' => 'italian',
+		'ka' => 'Georgian',
 		'kk' => 'kazakh',
 		'km' => 'Khmer',
 		'ko' => 'korean',
+		'ku' => 'kurdish',
 		'ky' => 'kyrgyz',
 		'la' => 'latin',
 		'lt' => 'lithuanian',
@@ -229,6 +234,7 @@ class CtransifexHelperLanguage
 		'mn' => 'mongolian',
 		'mr' => 'marathi',
 		'ms' => 'malay',
+		'my' => 'burmese',
 		'nb' => 'norwegian',
 		'ne' => 'nepali',
 		'nl' => 'dutch',
@@ -245,10 +251,12 @@ class CtransifexHelperLanguage
 		'sr' => 'serbian',
 		'sv' => 'swedish',
 		'sw' => 'swahili',
+		'ta' => 'tamil',
 		'te' => 'telugo',
 		'th' => 'thai',
 		'tl' => 'tagalog',
 		'tr' => 'turkish',
+		'ug' => 'uighur',
 		'uk' => 'ukrainian',
 		'ur' => 'urdu',
 		'uz' => 'uzbek',
@@ -348,7 +356,7 @@ class CtransifexHelperLanguage
 		'bt' => 'Bhutan',
 		'bo' => 'Bolivia',
 		'bq' => 'Bonaire',
-		'ba' => 'Bosnia and herzegovina',
+		'ba' => 'Bosnia and Herzegovina',
 		'bw' => 'Botswana',
 		'bv' => 'Bouvet island',
 		'br' => 'Brazil',
@@ -537,7 +545,7 @@ class CtransifexHelperLanguage
 		'se' => 'Sweden',
 		'ch' => 'Switzerland',
 		'sy' => 'Syrian arab republic',
-		'tw' => 'Taiwan, province of china',
+		'tw' => 'Taiwan, province of China',
 		'tj' => 'Tajikistan',
 		'tz' => 'Tanzania, united republic of',
 		'th' => 'Thailand',
@@ -545,11 +553,11 @@ class CtransifexHelperLanguage
 		'tg' => 'Togo',
 		'tk' => 'Tokelau',
 		'to' => 'Tonga',
-		'tt' => 'Trinidad and tobago',
+		'tt' => 'Trinidad and Tobago',
 		'tn' => 'Tunisia',
 		'tr' => 'Turkey',
 		'tm' => 'Turkmenistan',
-		'tc' => 'Turks and caicos islands',
+		'tc' => 'Turks and Caicos Islands',
 		'tv' => 'Tuvalu',
 		'ug' => 'Uganda',
 		'ua' => 'Ukraine',
@@ -568,6 +576,9 @@ class CtransifexHelperLanguage
 		'eh' => 'Western sahara',
 		'xx' => '',
 		'ye' => 'Yemen',
+		// There is no latin country, but transifex has named the lang so...
+		'yu' => 'Latin',
+		'za' => 'South Africa',
 		'zm' => 'Zambia',
 		'zw' => 'Zimbabwe',
 	);
